# pyIC

./: .cruft.json  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  environment.yml  immerse_test_cases.ipynb  index.html  mkdocs.yml  pyIC_example.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: on-push.yml
GRID/: index.html
docs/: GRID.md  conf.py  index.md  regrid.md
docs/references/: grid.md  pyic_exe.md  regrid.md
examples/: synthetic_data_regrid.py
examples/NEMO/: NCMRWF.py  NEMO.py
examples/generate_synthetic_data/: 1d_data.py  synthetic_data_gen.py
examples/synthetic_data/: synthetic_data_regrid.py
examples/synthetic_data/1d/: 1d_data.py  regrid_1d.py
examples/synthetic_data/generic/: synthetic_data_gen.py  synthetic_data_regrid.py
examples/test_cases/: NEMO.py  synthetic_data_regrid.py
examples/vertical_convert/: vertical_convert_example.ipynb
examples/vertical_regrid/: vertical_regrid.ipynb  vertical_regrid_example.ipynb
pyic/: __init__.py
references/grid/: index.html
references/pyic_exe/: index.html
references/regrid/: index.html
regrid/: index.html
search/: search_index.json
src/pyic/: __init__.py  grid.py  pyic_exe.py  regrid.py
tests/: synthetic_data_gen.py  test_00_version.py  test_gridclass.py
