[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[options]
classifiers = [
  "License :: OSI Approved :: GPL License",
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Oceonography Modelling",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python"
]
dependencies = [
  "netCDF4",
  "numpy",
  "xarray",
  "xesmf"
]
description = "NEMO Regional Configuration Toolbox"
dynamic = ["version"]
install_requires = []
keywords = [
  "Oceanography",
  "NEMO"
]
license = {file = "LICENSE"}
name = "pyic"
readme = "README.md"

[project.optional-dependencies]
dev = [
  "mypy",
  "commit"
]
docs = [
  "sphinx",
  "sphinx-autoapi",
  "sphinx_rtd_theme",
  "myst-parser",
  "pydata-sphinx-theme"
]
tests = [
  "pytest",
  "pytest-cov"
]

[project.scripts]
pyic = "pyic.pyic_exe:main"
pyic_ncml_generator = "pyic.pyic_ncml_generator:main"
pyic_settings_editor = "pyic.pyic_settings_editor:main"

[project.urls]
documentation = "https://pynemo.readthedocs.io/en/latest/"
repository = "https://github.com/NOC-MSM/pyic"

[tool.coverage.run]
branch = true

[tool.mypy]
strict = false

[tool.ruff]
# Black line length is 88, but black does not format comments.
line-length = 110
lint.ignore = [
  # pydocstyle: Missing Docstrings
  "D1",
  # pydocstyle: numpy convention
  "D107",
  "D203",
  "D212",
  "D213",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
lint.select = [
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # isort
  "I",
  # pydocstyle
  "D"
]

[tool.setuptools.package-data]
gui = ["*.png", "*.ncml"]
"pyic" = ["*.info"]
"reader.jars" = ["*.jar"]
share = ["epsg"]

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
write_to = "src/pyic/version.py"
write_to_template = '''
# Do not change! Do not track in version control!
__version__ = "{version}"
'''
